--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,51 @@
 venv/
 *.xml
 *.iml
+*.cbp
+*.cmake
+*.internal
+*.o
+LFA/NFA/CMakeLists.txt
+LFA/NFA/cmake-build-debug/NFA
+LFA/NFA/cmake-build-debug/Makefile
+LFA/NFA/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+LFA/NFA/cmake-build-debug/CMakeFiles/progress.marks
+LFA/NFA/cmake-build-debug/CMakeFiles/NFA.dir/progress.make
+LFA/NFA/cmake-build-debug/CMakeFiles/NFA.dir/link.txt
+LFA/NFA/cmake-build-debug/CMakeFiles/NFA.dir/flags.make
+LFA/NFA/cmake-build-debug/CMakeFiles/NFA.dir/depend.make
+LFA/NFA/cmake-build-debug/CMakeFiles/NFA.dir/CXX.includecache
+LFA/NFA/cmake-build-debug/CMakeFiles/NFA.dir/build.make
+LFA/NFA/cmake-build-debug/CMakeFiles/Makefile2
+LFA/NFA/cmake-build-debug/CMakeFiles/CMakeOutput.log
+LFA/NFA/cmake-build-debug/CMakeFiles/cmake.check_cache
+LFA/NFA/cmake-build-debug/CMakeFiles/clion-log.txt
+LFA/NFA/cmake-build-debug/CMakeFiles/clion-environment.txt
+LFA/NFA/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+LFA/NFA/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/a.out
+LFA/NFA/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/CMakeCCompilerId.c
+LFA/NFA/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/a.out
+LFA/NFA/cmake-build-debug/CMakeFiles/3.15.3/CMakeDetermineCompilerABI_CXX.bin
+LFA/NFA/cmake-build-debug/CMakeFiles/3.15.3/CMakeDetermineCompilerABI_C.bin
+LFA/NFA/cmake-build-debug/CMakeCache.txt
+LFA/DFA/CMakeLists.txt
+LFA/DFA/cmake-build-debug/Makefile
+LFA/DFA/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+LFA/DFA/cmake-build-debug/CMakeFiles/progress.marks
+LFA/DFA/cmake-build-debug/CMakeFiles/Makefile2
+LFA/DFA/cmake-build-debug/CMakeFiles/DFA.dir/progress.make
+LFA/DFA/cmake-build-debug/CMakeFiles/DFA.dir/link.txt
+LFA/DFA/cmake-build-debug/CMakeFiles/DFA.dir/flags.make
+LFA/DFA/cmake-build-debug/CMakeFiles/DFA.dir/depend.make
+LFA/DFA/cmake-build-debug/CMakeFiles/DFA.dir/build.make
+LFA/DFA/cmake-build-debug/CMakeFiles/CMakeOutput.log
+LFA/DFA/cmake-build-debug/CMakeFiles/cmake.check_cache
+LFA/DFA/cmake-build-debug/CMakeFiles/clion-log.txt
+LFA/DFA/cmake-build-debug/CMakeFiles/clion-environment.txt
+LFA/DFA/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+LFA/DFA/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/a.out
+LFA/DFA/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/CMakeCCompilerId.c
+LFA/DFA/cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/a.out
+LFA/DFA/cmake-build-debug/CMakeFiles/3.15.3/CMakeDetermineCompilerABI_CXX.bin
+LFA/DFA/cmake-build-debug/CMakeFiles/3.15.3/CMakeDetermineCompilerABI_C.bin
+LFA/DFA/cmake-build-debug/CMakeCache.txt
